Fri Mar 28 12:19:35 CET 2003 Daniel Veillard <daniel@veillard.com>

	* python/libxsl.py: fix bug #109395 as pointed out by Ben Phillips
	  and avoid some warnings when loading the python modules on non
	  Linux platforms.
	* libxslt/transform.c: fix a bug introduced in the document lookup
	  and exhibited by the keys test.

Wed Mar 26 22:41:00 CET 2003 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-113.*
	  tests/general/Makefile.am tests/general/bug-113*: added an
	  example in the regression tests for bug #109160 fixed in libxml2

Wed Mar 26 21:43:30 CET 2003 Daniel Veillard <daniel@veillard.com>

	* configure.in python/Makefile.am python/libxslt.c libxslt/xsltutils.c
	  libxslt/trio.h libxslt/triodef.h: portability fixes from Albert Chin
	* python/libxslt.py: avoid RTLD_GLOBAL detection warning too

Wed Mar 26 19:08:55 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: forgot to make one change related to
	  Result Value Tree change, pointed out by Sebastian Rahtz
	* tests/docs/Makefile.am tests/docs/bug-112.*
	  tests/general/Makefile.am tests/general/bug-112*: added an
	  example in the regression tests that bug

Wed Mar 26 01:38:38 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: second part of the patch fixing #108905
	  performances problems, ask for computation of document order on
	  the document transformed and avoid inefficiencies building large
	  nodesets of unique nodes.
	* configure.in: fix a trouble with libtool in my debug environment.

Mon Mar 24 22:30:00 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c libxslt/transform.c libxslt/variables.c:
	  Result Value Tree are now generated with a document root node
	  not an element, it's quite cleaner.
	* configure.in libxslt.spec.in NEWS: But this requires libxml2-2.5.5
	  also prepared for libxslt-1.0.28 release
	* doc/*: updated and regenerated the docs
