@@ -1,3 +1,11 @@
+Tue Apr  1 11:28:01 CEST 2003 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/transform.c: fixed a namespace redundancy problem
+	  in xsl:element
+	* tests/docs/Makefile.am tests/docs/bug-114.*
+	  tests/general/Makefile.am tests/general/bug-114*: added an
+	  example in the regression tests for that bug.
+
 Fri Mar 28 12:19:35 CET 2003 Daniel Veillard <daniel@veillard.com>
 
 	* python/libxsl.py: fix bug #109395 as pointed out by Ben Phillips
